--- a/client/explore.html
+++ b/client/explore.html
@@ -66,7 +66,7 @@
               <option value="southeast" data-subtext="Region">Southeast</option>
             </select>
             <h2> 
-              Have a state in mind?
+              Choose a state
             </h2>
             <select
               class="selectState"
