finishes css on explore page

--- a/client/explore.html
+++ b/client/explore.html
@@ -88,6 +88,7 @@
               name="trip-start"
               min="2021-05-01"
               max="2022-12-31"
+              required
             />
 
             <label for="end">Headed Home: </label>
@@ -97,6 +98,7 @@
               name="trip-end"
               min="2021-05-01"
               max="2022-12-31"
+              required
             />
           </div>
         </div>
