--- a/client/itinerary.html
+++ b/client/itinerary.html
@@ -95,7 +95,7 @@
             value="${trips[0].endDate}"
             style="display: none"
           />
-          <button type="submit" class="btn btn-warning" id="edit-trip-button" style="display: none">
+          <button type="submit" class="btn btn-warning text-light" id="edit-trip-button" style="display: none">
             Submit Changes
           </button>
         </form></div></div></div>
