changed text on homepage

--- a/client/home.html
+++ b/client/home.html
@@ -35,7 +35,7 @@
     <div class="container" style="background-image: url('assets/homeBackground2.png'); background-size: contain; background-repeat: no-repeat;background-color: rgb(253, 247, 232);"
     >
     <div class="buttonContainer">
-      <a href="/explore"><button type="button" class="btn btn-warning btn-lg btn-block text-secondary">Create Your<br>Wander Plan</button></a>
+      <a href="/explore"><button type="button" class="btn btn-warning btn-lg btn-block text-secondary">Create A Trip</button></a>
     </div>  
   </div>
 </main>
