final touches for day

--- a/client/explore.html
+++ b/client/explore.html
@@ -44,7 +44,7 @@
       <form class="fullSearch">
         <div class="givetripName">
         <h2>What would you like to name your trip?</h2>
-        <input type="text" name="trip-name" class="trip" />
+        <input type="text" name="trip-name" class="trip" required/>
         </div>
 
         <div class="choiceContainer">
