--- a/client/explore.html
+++ b/client/explore.html
@@ -16,6 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Boogaloo&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+<link rel="shortcut icon" type="image/x-icon" href="/assets/favicon.ico" />
     <title>Explore</title>
   </head>
   <body>
